# inspire_demos

./: .gitignore  Convert-MarkdownToPDF.ps1  README.md  both_hand.py  demo1.py  pyproject.toml  setup.cfg  setup.py  touch_data.py
.github/: copilot-commit-message-instructions.md
api/: inspire_api.py
docs/: MODBUS_IMPLEMENTATION.md  STRESS_TESTING_GUIDE.md  STYLE-GUIDE.md  styling-guide.md  template.html
docs/ROS2/: Modbus_TOC.jp.md  Modbus_Usage_Guide.en.md  Modbus_使用方法.cn.md  Modbus_使用方法.jp.md
examples/: README.md  advanced_demo.py  basic_demo.py  basic_demo_serial.py  basic_serial_demo.py  dual_interface_demo.py  interface_comparison.py  modbus_demo.py  simple_stress_test.py  simple_visualizer.py  stress_test_demo.py  stress_test_throughput.py  tactile_data_class_demo.py  tactile_data_demo.py  ultra_simple_dual_demo.py
inspire_demos/: __init__.py  api.py  inspire_modbus.py  inspire_serial.py
style/: minimal-style.css  style.css
